# PCmax-Genetic-Scheduler

./: README.md
task-scheduler-cpp-testing/: CMakeLists.txt
task-scheduler-cpp-testing/include/: Crossing.hpp  DataParser.hpp  Fitness.hpp  GreedyScheduler.hpp  Mutation.hpp  utils.hpp
task-scheduler-cpp-testing/src/: Crossing.cpp  DataParser.cpp  Fitness.cpp  GreedyScheduler.cpp  Mutation.cpp  main.cpp  main2.cpp
temp/: sequencing_with comments.cpp  v1.cu  v2workingslow.cu  v4alsoworkingidkmaybebetter.cu  v5seemstoworkbutbad.cu
temp/Sequential/: CMakeLists.txt
temp/Sequential/src/: config.json  main.cpp
temp/task_scheduler/: chromosome_create.py  crossing.py  data_generator.py  fitness_calculation.py  greedy_ts.py  main.py  mutation.py  n100m800.txt  parsing_data.py
